Fix SVG clipping issues on iOS/Safari by setting global overflow: visible

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,10 @@
     -moz-osx-font-smoothing: grayscale;
   }
 
+  svg {
+    overflow: visible !important;
+  }
+
   body {
     background-color: #FDFBF7;
     font-family: 'Inter', sans-serif;
